--- a/Ratbags.Gateway/appsettings.json
+++ b/Ratbags.Gateway/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "JWT": {
+    "Secret": "yourSuperSecretKey1",
+    "Issuer": "yourIssuer",
+    "Audience": "yourAudience"
+  },
   "Certificate": {
     "Name": "your certificate name",
     "Password": "your certificate password"
