--- a/Ratbags.Gateway/Ratbags.Gateway.csproj
+++ b/Ratbags.Gateway/Ratbags.Gateway.csproj
@@ -5,11 +5,12 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>5f1e87a3-2736-40bd-b1f3-57ba4e3ce057</UserSecretsId>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
-    <PackageReference Include="Ocelot" Version="23.3.3" />
+    <PackageReference Include="Ocelot" Version="23.3.4" />
     <PackageReference Include="Ratbags.Shared.DTOs.Events" Version="1.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
   </ItemGroup>
