--- a/Ratbags.Gateway/Ratbags.Gateway.csproj
+++ b/Ratbags.Gateway/Ratbags.Gateway.csproj
@@ -11,7 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Ocelot" Version="23.3.4" />
-    <PackageReference Include="Ratbags.Shared.DTOs.Events" Version="1.0.5" />
+    <PackageReference Include="Ratbags.Core" Version="1.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
   </ItemGroup>
 
