Updated ocelot.json for /signin-google. also modified kestrel config

--- a/Ratbags.Gateway/appsettings.json
+++ b/Ratbags.Gateway/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Ports": {
+    "http": "your http port",
+    "https": "your https port"
+  },
   "JWT": {
     "Secret": "yourSuperSecretKey1",
     "Issuer": "yourIssuer",
@@ -6,7 +10,9 @@
   },
   "Certificate": {
     "Name": "your certificate name",
-    "Password": "your certificate password"
+    "Key": "your certificate key",
+    "Path": "your certificate path",
+    "Password": "your certificate password if using pfx"
   },
   "Logging": {
     "LogLevel": {
